--- a/client/www/disembark.css
+++ b/client/www/disembark.css
@@ -119,8 +119,7 @@ body {
 }
 
 #applicantTable .cell {
-  border-right: 1px solid rgba(0, 0, 0, 0.5);
-  border-bottom: 1px solid rgba(0, 0, 0, 0.5);
+  border-bottom: 1px solid #cccccc;
 }
 
 .cell {
@@ -236,8 +235,6 @@ body {
 .detailPane {
   margin-left: 0px;
   min-width: 200px;
-  border: 1px solid #fef5ca;
-  background-color: #fef5ca;
 }
 
 .selected > div {
@@ -259,19 +256,17 @@ textarea {
 
 .comment {
   margin: 3px;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid #cccccc;
 }
 
 .comment  div:first-child {
-  font-size: smaller;
+  font-size: 9pt;
   font-weight: bold;
-}
-.comment  div:nth-child(1) {
-  font-size: smaller;
+  margin-top: 5px;
 }
 .comment  div:nth-child(2) {
-  margin-top: 3px;
-  margin-bottom: 5px;
+  color: #999999;
+  font-size: 9pt;
 }
 
 .star {
