--- a/client/www/disembark.css
+++ b/client/www/disembark.css
@@ -172,7 +172,7 @@ body {
   max-width: 200px;
   max-height: 100px;
   overflow-x: hidden;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .scroll {
