--- a/client/www/disembark.css
+++ b/client/www/disembark.css
@@ -90,7 +90,7 @@ body {
   font-family: sans-serif;
   font-size: 10pt;
   margin: 0px;
-  background-color: #3A1E1A;
+  background-color: #881c1c;
 }
 
 .whitePanel {
@@ -288,7 +288,7 @@ textarea {
 }
 
 #banner {
-  background-color: #3A1E1A;
+  background-color: #881c1c;
   color: white;
   margin: -1px;
 }
